2004-11-26  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

	* user_share.c: 
	* file-share-properties.c:
	Add copyright headers.

=== gnome-user-share 0.3 ===
	
2004-11-26  Alexander Larsson  <alexl@redhat.com>
	
	* NEWS:
	Update for release

	* file-share-properties.c: 
	* dav_user.conf:
	Change user to guest and realm to something
	that describes what user to use.
	
2004-11-26  Alexander Larsson  <alexl@redhat.com>

	* .cvsignore:
	Add new files

	* md5.[ch]:
	Add md5 checksum implementation, required for the digest auth

	* desktop_gnome_file_sharing.schemas.in:
	* user_share.c:
	* dav_user.conf:
	Implement password support

	* Makefile.am:
	* file-share-properties.c:
	* file-share-properties.glade:
	Add properties ui
	
	* configure.in:
	Bump version to 0.3
	
	* gnome-user-share.spec:
	Update for new version
	
2004-09-11  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: added
	* user_share.c: (spawn_httpd): fix warning

2004-09-09  Alexander Larsson  <alexl@redhat.com>

	* gnome-user-share.spec: 
	* configure.in:
	Bump version to 0.2
	
2004-09-09  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	Find and link to X.
	
	* dav_user.conf:
	Set MaxSpareServers to 1
	
	* user_share.c: (spawn_httpd), (file_sharing_enabled_changed),
	(x_io_error_handler), (x_input), (main):
	Connect to X to follow X session lifetime.
	Make error spew on stderr.

2004-09-09  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Require howl 0.9.6

	* NEWS: 
	* README:
	Add some text

2004-09-09  Alexander Larsson  <alexl@redhat.com>

	* user_share.c:
	Create Public dir if needed.
	Make httpd run in minimal environment.