@@ -1,5 +1,6 @@
 ServerRoot ${HOME}/.gnome2/user-share
 PidFile pid
+LockFile lock
 LogLevel crit
 #LogLevel info
 ErrorLog log
